[gd_scene load_steps=17 format=2]

[ext_resource path="res://GAME/art/robo.png" type="Texture" id=1]
[ext_resource path="res://GAME/scripts/Player.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 72, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 120, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 168, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 216, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 11 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "Run",
"speed": 14.0
}, {
"frames": [ SubResource( 22 ) ],
"loop": true,
"name": "Wall_Slide",
"speed": 5.0
}, {
"frames": [ SubResource( 23 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 10.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 232 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 3
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -12 )
frames = SubResource( 12 )
animation = "Idle"
playing = true

[node name="Coll" type="CollisionShape2D" parent="."]
position = Vector2( 0, -10.5 )
shape = SubResource( 1 )

[node name="Resetter" type="Area2D" parent="."]
position = Vector2( -352, -8 )

[node name="ResetterColl" type="CollisionShape2D" parent="Resetter"]
position = Vector2( 0, -80 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="JumpBufferTimer" type="Timer" parent="."]
wait_time = 0.14
one_shot = true

[node name="CoyoteJumpTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="RightSlide" type="RayCast2D" parent="."]
position = Vector2( 7, -11 )
rotation = -1.5708
scale = Vector2( 1.6, 0.2 )
enabled = true
cast_to = Vector2( 0, 10 )

[node name="LeftSlide" type="RayCast2D" parent="."]
position = Vector2( -7, -11 )
rotation = 1.5708
scale = Vector2( 1.6, 0.2 )
enabled = true
cast_to = Vector2( 0, 10 )

[connection signal="body_entered" from="Resetter" to="." method="_on_Resetter_body_entered"]
[connection signal="timeout" from="JumpBufferTimer" to="." method="_on_JumpBufferTimer_timeout"]
[connection signal="timeout" from="CoyoteJumpTimer" to="." method="_on_CoyoteJumpTimer_timeout"]
